# DQL_multirotor_landing

./: .gitignore  .gitmodules  .python-version  README.md  Update README.md  actions.txt  hello.py  justfile  publish_rpy_thrust_one_pitch.txt  pyproject.toml  requirements.txt  setup.bash  simulation.sh  test.ipynb  test.usd  train.bash  training.sh  training_x.sh  training_y.sh  view_results.ipynb
assets/: Q_table.npy  Q_table_a.npy  Q_table_a_prd.npy  Q_table_b.npy  Q_table_double.npy  anymal_c.usda  iw_hub.usd  iw_hub.usda  state_action_count.npy  tainer.pickle  test.usd  test.usda
assets/08-03-2025 17:01:51/: Q_table_a.npy  state_action_count.npy  trainer.pickle
assets/08-03-2025 17:01:51/logs/: events.out.tfevents.1741449714.haislich-Standard-PC-Q35-ICH9-2009.779185.0
assets/22-02-2025 21:37:06/: Q_table_a.npy  tainer.pickle
assets/22-02-2025 21:37:06/logs (copy)/: events.out.tfevents.1740256642.haislich-Standard-PC-Q35-ICH9-2009.10903.7  events.out.tfevents.1740256645.haislich-Standard-PC-Q35-ICH9-2009.10903.9  events.out.tfevents.1740256652.haislich-Standard-PC-Q35-ICH9-2009.10903.13  events.out.tfevents.1740256692.haislich-Standard-PC-Q35-ICH9-2009.10903.27  events.out.tfevents.1740256697.haislich-Standard-PC-Q35-ICH9-2009.10903.30  events.out.tfevents.1740256702.haislich-Standard-PC-Q35-ICH9-2009.10903.31  events.out.tfevents.1740256740.haislich-Standard-PC-Q35-ICH9-2009.10903.42  events.out.tfevents.1740256743.haislich-Standard-PC-Q35-ICH9-2009.10903.44  events.out.tfevents.1740256770.haislich-Standard-PC-Q35-ICH9-2009.10903.55  events.out.tfevents.1740256771.haislich-Standard-PC-Q35-ICH9-2009.10903.56  events.out.tfevents.1740256772.haislich-Standard-PC-Q35-ICH9-2009.10903.57  events.out.tfevents.1740256776.haislich-Standard-PC-Q35-ICH9-2009.10903.58  events.out.tfevents.1740256781.haislich-Standard-PC-Q35-ICH9-2009.10903.61  events.out.tfevents.1740256785.haislich-Standard-PC-Q35-ICH9-2009.10903.62  events.out.tfevents.1740256786.haislich-Standard-PC-Q35-ICH9-2009.10903.63  (+4817 more)
assets/curriculum_step0/: tainer.pickle
assets/x_direction/: Q_table_a.npy
assets/x_direction/22-02-2025 21:37:06/: state_action_count.npy
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/: LibrePilot  mav_comm  moving_platform_control  moving_platform_node_ros.py  pid  rotors_simulator
src/dql_multirotor_landing/: CMakeLists.txt  __init__.py  __main__.py  curriculum_learner.py  drone_controller.py  filters.py  manager_node.py  moving_platform.py  observation_layer.py  observation_utils.py  package.xml  parameters.py  pid.py  q_learning.py  rotors_interface_cpp.py  setup.py  test.py  utils.py
src/environment/: __init__.py  crazyflye.usda  custom_quad.py.usd  custom_quad.usda  custom_quadruped_base_env.py  direct_env.py  multiple_indipendent_assets.py  rl_env.py  run_direct_workflow.py  test2_env.py
src/lab_assets/: agent.py  target.py
src/moving_platform/: CMakeLists.txt  package.xml  setup.py
src/moving_platform_control/: .gitignore  .gitmodules  README.md
src/pid/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/rotors_simulator/rotors_gazebo/: CMakeLists.txt
src/rotors_simulator/rotors_gazebo/launch/: mav_with_keyboard.launch
src/trainer/: CMakeLists.txt  package.xml  setup.py
tests/: p.py
(+16931 files in other folders)
