[project]
name = "dql-multirotor-landing"
version = "0.1.0"
description = "Deep Q-Learning for multirotor landing"
readme = "README.md"
authors = [
    { name = "Valerio Belli", email = "valeriobelli26@gmail.com" },
    { name = "Jose Manuel", email = "josedlv936@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pip",
    "isaacsim==4.2.0.2",
    "isaacsim-extscache-kit==4.2.0.2",
    "isaacsim-extscache-kit-sdk==4.2.0.2",
    "isaacsim-extscache-physics==4.2.0.2",
]

[project.scripts]
dql-multirotor-landing2 = "dql_multirotor_landing:main"

[build-system]
requires = ["hatchling", "pip"]
build-backend = "hatchling.build"

[tool.black]
line-length = 119

[[tool.mypy.overrides]]
module = ["omni.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "loguru>=0.7.3",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

[tool.ruff]
ignore = ["E402"]
line-length = 119

[tool.isort]
known_third_party = ["dql_multirotor_landing"]
skip = ["dql_multirotor_landing"]
profile = "ruff"
